--- a/css/main.scss
+++ b/css/main.scss
@@ -193,3 +193,27 @@ ol.breadcrumb{
     opacity: 1;
   }
 }
+
+//cart
+.cart{
+  
+  .produk-img{
+    position: relative;
+  }
+  .produk-img a{
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 8px;
+    background-color: rgba(0,0,0,0.7);
+    opacity: 0;
+    transition: opacity 0.3s;
+  }
+  .produk-img:hover a{
+    opacity: 1;
+  }
+  .media-body a:hover{
+    text-decoration: none;
+  }
+}
