finishing cart, detail

--- a/css/main.css
+++ b/css/main.css
@@ -224,4 +224,35 @@ ol.breadcrumb a:hover {
 .cart .media-body a:hover {
   text-decoration: none;
 }
+
+.serupa .produk-img {
+  position: relative;
+}
+
+.serupa .produk-img a {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 8px;
+  background-color: rgba(0, 0, 0, 0.7);
+  opacity: 0;
+  -webkit-transition: opacity 0.3s;
+  transition: opacity 0.3s;
+}
+
+.serupa .produk-img:hover a {
+  opacity: 1;
+}
+
+.serupa .media-body a:hover {
+  text-decoration: none;
+}
+
+.serupa .text-scn {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  color: #868476;
+}
 /*# sourceMappingURL=main.css.map */
