--- a/css/main.css
+++ b/css/main.css
@@ -201,6 +201,19 @@ ol.breadcrumb a:hover {
   opacity: 1;
 }
 
+.cart .text-header {
+  font-family: "Poppins", sans-serif;
+  font-weight: 600;
+  font-size: 36px;
+}
+
+.cart .text-subheader {
+  font-family: "Poppins", sans-serif;
+  font-weight: 600;
+  font-size: 24px;
+  color: #868476;
+}
+
 .cart .produk-img {
   position: relative;
 }
