--- a/css/main.scss
+++ b/css/main.scss
@@ -196,7 +196,17 @@ ol.breadcrumb{
 
 //cart
 .cart{
-  
+  .text-header{
+    font-family: "Poppins", sans-serif;
+    font-weight: 600;
+    font-size: 36px;
+  }
+  .text-subheader{
+    font-family: "Poppins", sans-serif;
+    font-weight: 600;
+    font-size: 24px;
+    color: #868476;
+  }
   .produk-img{
     position: relative;
   }
